sample/msvc/error/c2063.cpp
// C2063.c
int main() {
   int i, j;
   j = i();    // C2063, i is not a function
}
